@@ -1,5 +1,5 @@
 #
-# $Id: minisvc.in,v 1.33 2022-11-09 20:13:17+05:30 Cprogrammer Exp mbhangui $
+# $Id: minisvc.in,v 1.34 2022-11-14 19:57:33+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -11,7 +11,7 @@ shareddir=@shareddir@
 LOGDIR=@logdir@
 libexecdir=@libexecdir@
 host=@HOST@
-RCSID="# \$Id: minisvc.in,v 1.33 2022-11-09 20:13:17+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: minisvc.in,v 1.34 2022-11-14 19:57:33+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
@@ -173,7 +173,7 @@ Known values for OPTION are:
 --import-variables=file
   --servicedir=service_path
   --service-name=service_name
-  [--force]
+  [--force] [--silent]
 
   Import new environment variables from a file having one more multiple
   key=value pairs
@@ -182,6 +182,7 @@ Known values for OPTION are:
   service_name   - name of supervise service without path
                    e.g. (qmail-smtpd.25)
   force          - Set the variable if variable already exists
+  silent         - be less verbose
 
 --export-variables=file
   --servicedir=service_path
@@ -970,12 +971,12 @@ mode=$6
 if [ $silent -eq 0 ] ; then
 	if [ $restore_flag -eq 1 ] ; then
 		printf "Restoring %-40s from %s\n" $dir $env_file
+		old=$silent
+		silent=1
 	else
 		printf "importing %-40s from %s\n" $dir $env_file
 	fi
 fi
-old=$silent
-silent=1
 sed -e 's{^[ \t]*#.*{{g ; s{^[ \t]*{{g ; s{#.*{{ ;  /^$/d' $env_file | while read line
 do
 	if [ -z "$line" ] ; then
@@ -983,10 +984,12 @@ do
 	fi
 	file=`echo $line | cut -d= -f1`
 	value=`echo $line | cut -d= -f2- | tr -d \"`
-	if [ $force -eq 0 -a -f $dir/$file ] ; then
-		echo "env variable $file exists and --force not specified" 1>&2
-		silent=$old
-		return 1
+	# when importing variables
+	if [ $restore_flag -eq 0 -a $force -eq 0 -a -f $dir/$file ] ; then
+		if [ $silent -eq 0 ] ; then
+			echo "importing variables without --force. not replacing variable $file" 1>&2
+		fi
+		continue
 	fi
 	if [ -z "$value" ] ; then
 		value=`echo $line | cut -d= -f2-`
@@ -1025,9 +1028,14 @@ do
 		$chown $owner $dir/$file
 	fi
 done
-silent=$old
-if [ $restore_flag -ne 0 ] ; then
-	out=`mktemp -dt surblXXXXXXXXXX`
+if [ $restore_flag -eq 1 ] ; then
+	silent=$old
+fi
+
+# remove variables not originally present
+# This will restore variables to original state
+if [ $restore_flag -eq 1 ] ; then
+	out=`mktemp -dt svctXXXXXXXXXXX`
 	if [ $? -ne 0 ] ; then
 		echo "unable to create temp dir" 1>&2
 		return 1
@@ -2743,6 +2751,9 @@ fi
 exit 0
 #
 # $Log: minisvc.in,v $
+# Revision 1.34  2022-11-14 19:57:33+05:30  Cprogrammer
+# when importing variables don't treat existing variables as error
+#
 # Revision 1.33  2022-11-09 20:13:17+05:30  Cprogrammer
 # replaced deprecated egrep with grep -E
 #
