@@ -122,6 +122,8 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
 - 14/11/2022
 68. smtpd.c: set DISABLE_EXTRA_GREET environment variable to disable extra
     information in greeting
+69. svctool.in: when importing variables don't treat existing variables as
+    error
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
